deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-todo-deployment
spec:
  replicas: 1
  minReadySeconds: 10
  selector:
    matchLabels:
      app: simple-todo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: simple-todo
    spec:
      containers:
      - name: simple-todo
        image: denrah/simple-todo.arm64:latest
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
