deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-todo-service
spec:
  ports:
    - port: 3000
  selector:
    app: simple-todo
  type: ClusterIP
