deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-todo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-todo-service
            port:
              number: 3000
